<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>states_sub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mshashank02@gmail.com">admin1</maintainer>
  <license>Apache License 2.0</license>
  
 
  <build_depend>std_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>phasespace_msgs</build_depend>
  <build_depend>numpy</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>phasespace_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
